fixed alignment of buttons to be closer together

--- a/src/scss/components/calculator.scss
+++ b/src/scss/components/calculator.scss
@@ -41,6 +41,8 @@ label {
 
 .btns {
     display: flex;
+    width: 80%;
+    margin: 0 auto;
 }
 
 input, button {
